Fixes for healthcare app
